tests/baselines/reference/arithmeticOperatorWithOnlyNullValueOrUndefinedValue.errors.txt
==== tests/cases/compiler/arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts (80 errors) ====
    // operator *
    var ra1 = null * null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(2,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(2,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ra2 = null * undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(3,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(3,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ra3 = undefined * null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(4,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(4,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ra4 = undefined * undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(5,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(5,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator /
    var rb1 = null / null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(8,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(8,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rb2 = null / undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(9,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(9,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rb3 = undefined / null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(10,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(10,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rb4 = undefined / undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(11,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(11,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator %
    var rc1 = null % null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(14,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(14,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rc2 = null % undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(15,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(15,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rc3 = undefined % null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(16,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(16,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rc4 = undefined % undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(17,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(17,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator -
    var rd1 = null - null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(20,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(20,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rd2 = null - undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(21,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(21,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rd3 = undefined - null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(22,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(22,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rd4 = undefined - undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(23,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(23,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator <<
    var re1 = null << null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(26,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                      ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(26,19): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var re2 = null << undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(27,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                      ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(27,19): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var re3 = undefined << null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(28,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                           ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(28,24): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var re4 = undefined << undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(29,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                           ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(29,24): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator >>
    var rf1 = null >> null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(32,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                      ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(32,19): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rf2 = null >> undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(33,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                      ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(33,19): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rf3 = undefined >> null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(34,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                           ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(34,24): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rf4 = undefined >> undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(35,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                           ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(35,24): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator >>>
    var rg1 = null >>> null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(38,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(38,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rg2 = null >>> undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(39,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                       ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(39,20): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rg3 = undefined >>> null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(40,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                            ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(40,25): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rg4 = undefined >>> undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(41,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                            ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(41,25): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator &
    var rh1 = null & null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(44,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(44,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rh2 = null & undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(45,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(45,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rh3 = undefined & null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(46,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(46,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rh4 = undefined & undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(47,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(47,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator ^
    var ri1 = null ^ null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(50,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(50,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ri2 = null ^ undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(51,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(51,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ri3 = undefined ^ null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(52,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(52,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ri4 = undefined ^ undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(53,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(53,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    // operator |
    var rj1 = null | null;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(56,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(56,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rj2 = null | undefined;
              ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(57,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(57,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rj3 = undefined | null;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(58,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(58,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var rj4 = undefined | undefined;
              ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(59,11): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                          ~~~~~~~~~
!!! arithmeticOperatorWithOnlyNullValueOrUndefinedValue.ts(59,23): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.